Fix lỗi api user
