# swagger-output.json
@@ -252,16 +252,6 @@
         }
       }
     },
-    "/api/hlshop/userskey": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/api/hlshop/users/get-profile": {
       "get": {
         "description": "",
@@ -275,9 +265,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
